--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node -r sucrase/register src/server.js",
+    "build":"sucrase src -d build --transforms imports",
+    "start": "node build/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
