buid e add variaveis de ambiente

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 APP_URL='http://localhost:3000/
+HOST: 'tuffi.db.elephantsql.com'
+USERNAME= bepqouxy
+PASSWORD= hIlJ9cNNCfxRqo7NNfxH6gjSeE69BnJF
+DATABASE= bepqouxy
