--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-APP_URL='http://localhost:3000/
+APP_URL=http://localhost:3000/
+
+
+ROUTE_STATIC=http://localhost:3333
+
 HOST: 'tuffi.db.elephantsql.com'
 USERNAME= bepqouxy
 PASSWORD= hIlJ9cNNCfxRqo7NNfxH6gjSeE69BnJF
