--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
-            "request": "attach",
+            "request": "launch",
             "name": "Launch Program",
             "protocol": "inspector",
-            "restart": true
+            "restart": true,
             // "skipFiles": [
             //     "<node_internals>/**"
             // ],
-            // "program": "${workspaceFolder}\\index.js"
+            "program": "${workspaceFolder}\\build/server.js"
         }
     ]
 }
