--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cpf-cnpj-validator": "^1.0.1",
@@ -17,6 +18,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
